--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,7 @@
         <div class="nav-links">
             <a href="/">Главная</a>
             <a href="/universities/">Университеты</a>
+            <a href="/compare/">🤖 Сравнить</a>
             <a href="/test/">Тест</a>
             <a href="/test/" class="nav-btn">Пройти тест</a>
         </div>
