--- a/templates/universities_list.html
+++ b/templates/universities_list.html
@@ -13,6 +13,7 @@
     <div class="section-label">Образование</div>
     <h1>Университеты <span>Казахстана</span></h1>
     <p>Выбери свой будущий вуз. Мы собрали лучшие университеты страны с подробной информацией.</p>
+    <a href="{% url 'universities_comparison' %}" class="compare-btn">⚖️ Сравнить университеты</a>
 </header>
 
 <!-- Filters -->
